# lattices

./: .gitignore  Cargo.toml  README.md
arg/: Cargo.toml
arg/src/: lib.rs  witness.rs
digital_objects/: Cargo.toml
digital_objects/src/: lattice.tex  main.rs
hidden_r1cs/: Cargo.toml  README.md
hidden_r1cs/src/: lib.rs
lettuce/: Cargo.toml  README.md
lettuce/benches/: polynomial.rs  scalar.rs
lettuce/src/: fields.rs  lib.rs  log.rs  matrix.rs  montgomery.rs  ntt.rs  polynomial.rs  precomputed.rs  r1cs.rs
lettuce/src/commitments/: bdlop.rs  lwe_scalar.rs  mod.rs  sis_scalar.rs
lettuce/src/probability/: chi_sq.rs  gaussian.rs  mod.rs
lettuce/src/structures/: fields.rs  matrix.rs  milli_scalar_mont.rs  mod.rs  multivariate_polynomial.rs  polynomial.rs  r1cs.rs  vector.rs
lettuce/src/test/: mod.rs
scripts/: texrev.js  watch.js
src/: fields.rs  lib.rs  polynomial.rs  r1cs.rs  vector.rs
src/commitments/: bdlop.rs  bdlop_scalar.rs  sis_scalar.rs
src/fields/: oxfoi.rs  seven.rs
src/probability/: gaussian.rs
