[workspace]
resolver = "3"
members = ["lettuce", "hidden_r1cs", "digital_objects", "arg"]

[workspace.dependencies]
anyhow = "1"
rand = "0.9.2"
rand_chacha = "0.9.0"
log = "0.4.28"
criterion = "0"
serde = { version = "1", features = ["derive"] }

lettuce = "0"
zkpo = "0"
hidden_r1cs = "0"

[patch.crates-io]
lettuce = { path = "./lettuce" }
zkpo = { path = "../zkpo" }
hidden_r1cs = { path = "./hidden_r1cs" }
