[package]
name = "arg"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }

lettuce = { workspace = true }
hidden_r1cs = { workspace = true }
zkpo = { workspace = true }

