[package]
name = "lettuce"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Healthy lattice utilities over finite fields and quotient rings."

[[bench]]
name = "scalar"
harness = false

[[bench]]
name = "polynomial"
harness = false

[features]
default = ["rayon"]
rayon = ["dep:rayon"]

[dependencies]
# external log facade
log_ext = { package = "log", version = "0" }
anyhow = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }

blake3 = "1.8.2"
const-primes = "0"
env_logger = "0.11.8"
rayon = { version = "1.11.0", optional = true }

[dev-dependencies]
criterion = { workspace = true }
